
  o FEATURE: Post-manipulation function hook added [JED].

  o FEATURE: "Sphere" (residue selection) refinement - experimental

  o FEATURE: function to (re-)calculate probe dots around a give point.

  o FEATURE: monomer and residue selection dipoles

  o CHANGE: partial charges added to electrostatic surface calculation

  o CHANGE: SEGIDs are more intelligently inherited 

  o BUG-FIX: new atoms are added as HETATMs if appropriate
 
-----

Release 0.5.2 Uneno

   o BUG-FIX: Fix annoying shift-key-labels-atoms bug

-----

Release 0.5.1 Uneno

   o FEATURE: A "Delete Molecule" button is now available in the
     Display Manager [TJS].

   o FEATURE: show-rotamer-dialog is now available from the scripting
     layer (hence `quick rotamer' keybinding) [FvD].

   o FEATURE: Manual definition of NCS ghost matrices - GUI added.

   o FEATURE: overlay-my-ligands function introduced.

   o FEATURE: A simple interface to electrostatic surfaces has been
     introduced (Extensions -> Representations).

   o FEATURE: rotate-chi feature introduced.  For use with a PowerMate.

   o FEATURE: keyboard-based Go To Residue for quicker navigation.

   o CHANGE: NCS ghost work using LSQ to get the matrix, not SSM.
 
   o CHANGE: Display manager toggle buttons replaced with check
     buttons.

   o CHANGE: make-dynamically-transformed-ncs-maps takes an extra
     argument specifying if new maps should overwrite previous maps of
     the same name.

   o CHANGE: Extensions menu re-worked.

   o CHANGE: Keyboard zooming is now smoothed.

   o BUG-FIX: the chi angle bond highlighting works again.

   o BUG-FIX: The Cancel button in Save Restraints now works.

   o BUG-FIX: Check/Delete waters in Check mode no longer causes a
     crash when the "Close" button is clicked.

   o BUG-FIX: Atom elements are inferred from the atom name.

   o BUG-FIX: writing of cifs from the Restraints editor has been
     improved [JED].
