@@ -10238,6 +10238,31 @@ just the cell and symmetry)
       <property name="spacing">0</property>
 
       <child>
+	<widget class="GtkLabel" id="dynarama_label">
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">Ramachandran Plot </property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">False</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="padding">2</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
 	<widget class="GtkScrolledWindow" id="dynarama_scrolledwindow">
 	  <property name="visible">True</property>
 	  <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
